# BazelResourceExample

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  bazelisk
BazelResourceExample/: AppDelegate.swift  Info.plist  SceneDelegate.swift  ViewController.swift
BazelResourceExample.xcodeproj/: project.pbxproj
BazelResourceExample.xcodeproj/project.xcworkspace/xcuserdata/hborawski.xcuserdatad/: UserInterfaceState.xcuserstate
BazelResourceExample.xcodeproj/xcuserdata/hborawski.xcuserdatad/xcschemes/: xcschememanagement.plist
BazelResourceExample/Assets.xcassets/bazel.imageset/: Contents.json
BazelResourceExample/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
